--- a/rebar.config
+++ b/rebar.config
@@ -9,18 +9,10 @@
 {erl_opts, [warnings_as_errors, debug_info]}.
 
 {deps, [
-        {cuttlefish, ".*", {git, "git://github.com/basho/cuttlefish.git", {tag, "2.0.6"}}}
+        {cuttlefish, {git, "git://github.com/vertify/cuttlefish.git", {branch, "develop-otp19"}}}
        ]}.
 
-{port_env, [
-         %% Make sure to set -fPIC when compiling leveldb
-             {"CFLAGS", "$CFLAGS -Wall -O3 -fPIC"},
-             {"CXXFLAGS", "$CXXFLAGS -Wall -O3 -fPIC"},
-             {"DRV_CFLAGS", "$DRV_CFLAGS -O3 -Wall -I c_src/leveldb/include -I c_src/leveldb -I c_src/system/include"},
-             {"DRV_LDFLAGS", "$DRV_LDFLAGS c_src/leveldb/libleveldb.a c_src/system/lib/libsnappy.a -lstdc++"}
-             ]}.
-
 {pre_hooks, [{'get-deps', "c_src/build_deps.sh get-deps"},
-             {compile, "c_src/build_deps.sh"}]}.
+             {compile, "make -C c_src"}]}.
 
 {post_hooks, [{clean, "c_src/build_deps.sh clean"}]}.
