Fix port makefile

--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -54,9 +54,8 @@ OBJECTS = $(addsuffix .o, $(basename $(SOURCES)))
 COMPILE_C = $(c_verbose) $(CC) $(CFLAGS) $(CPPFLAGS) -c
 COMPILE_CPP = $(cpp_verbose) $(CXX) $(CXXFLAGS) $(CPPFLAGS) -c
 
-$(C_SRC_OUTPUT): $(OBJECTS)
+$(C_SRC_OUTPUT): deps $(OBJECTS)
 	@mkdir -p $(BASEDIR)/priv/
-	./build_deps.sh
 	$(link_verbose) $(CC) $(OBJECTS) $(LDFLAGS) $(LDLIBS) -o $(C_SRC_OUTPUT)
 
 %.o: %.c
@@ -70,6 +69,10 @@ $(C_SRC_OUTPUT): $(OBJECTS)
 
 %.o: %.cpp
 	$(COMPILE_CPP) $(OUTPUT_OPTION) $<
+
+deps:
+	./build_deps.sh get-deps
+	./build_deps.sh
 
 clean:
 	@rm -f $(C_SRC_OUTPUT) $(OBJECTS)
