--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,6 @@
         {cuttlefish, {git, "git://github.com/vertify/cuttlefish.git", {branch, "develop-otp19"}}}
        ]}.
 
-{pre_hooks, [{'get-deps', "c_src/build_deps.sh get-deps"},
-             {compile, "make -C c_src"}]}.
+{pre_hooks, [{compile, "make -C c_src"}]}.
 
 {post_hooks, [{clean, "c_src/build_deps.sh clean"}]}.
